infra/legacy/archive/aws-failover/live-snapshots/security-groups.json
{"SecurityGroups":[{"Description":"Allow ECS inbound traffic","GroupId":"sg-0ecbf08e8c514fb0d","GroupName":"Codedang-SG-ECS-Api","IpPermissions":[{"FromPort":22,"IpProtocol":"tcp","IpRanges":[{"CidrIp":"0.0.0.0/0","Description":"SSH"}],"Ipv6Ranges":[],"PrefixListIds":[],"ToPort":22,"UserIdGroupPairs":[]},{"FromPort":32768,"IpProtocol":"tcp","IpRanges":[],"Ipv6Ranges":[],"PrefixListIds":[],"ToPort":65535,"UserIdGroupPairs":[{"Description":"From ALB","GroupId":"sg-05fa5678a7fba7220","UserId":"2198 [...]
